--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,8 +28,11 @@ import { SITE_TITLE } from '../consts';
 	header {
 		margin: 0;
 		padding: 0 1em;
-		background: transparent;
+		background: rgba(var(--gray-light), 90%);
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
+		position: sticky;
+		top: 0;
+		z-index: 1000;
 	}
 	h2 {
 		margin: 0;
