Blog update, trying to fix video in markdown

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} <a href="https://nathker73.netlify.app/" target="_blank"> nathker</a>. All rights reserved.
+	&copy; {today.getFullYear()} <a href="https://smcurbelo.netlify.app/" target="_blank"> nathker</a>. All rights reserved.
 	<div class="social-links">
 		<a href="https://github.com/na7hk3r" target="_blank">
 			<span class="sr-only">Go to Nathker Github</span>
@@ -18,9 +18,9 @@ const today = new Date();
 </footer>
 <style>
 	footer {
-		padding: 2em 1em 6em 1em;
 		background: linear-gradient(var(--gray-gradient)) no-repeat;
 		color: rgb(var(--gray));
+		padding: 2em 1em 6em 1em;
 		text-align: center;
 	}
 	.social-links {
