Correccion ortografica en index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>h0la🐕 ola🌊</h1>
 			<p>
-				De la necesidad de un lugar donde expresarme y que nadie esté obligado a verlo salvo que expresamente lo elija, surje este blog.
+				De la necesidad de un lugar donde expresarme y que nadie esté obligado a verlo salvo que expresamente lo elija, surge este blog.
 			</p>
 			<p>
 				En este espacio estaré documentando mi proceso de aprendizaje y estudio de la programación. Y cosas del entretiempo.
