--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,8 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import Layout from "../layouts/main-layout.astro";
+import Home from "../home/home.astro";
 ---
 
-<!doctype html>
-<html lang="es">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>h0la🐕 ola🌊</h1>
-			<p>
-				De la necesidad de un lugar donde expresarme y que nadie esté obligado a verlo salvo que expresamente lo elija, surge este blog.
-			</p>
-			<p>
-				En este espacio estaré documentando mi proceso de aprendizaje y estudio de la programación. Y cosas del entretiempo.
-			</p>
-			<p>
-				Espero que algo de lo que aquí encuentres sea de tu agrado o te ayude a entenderme en esos días que desaparezco.
-			</p>
-			<p>
-				Gracias por llegar y tu permanencia. Que tengas un excelente día/noche.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<Layout>
+  <Home />
+</Layout>
