--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -91,7 +91,8 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 				<ul>
 					{
-						posts.map((post) => (
+						posts.sort((a, b) => new Date(b.data.pubDate) - new Date(a.data.pubDate))
+						.map((post) => (
 							<li>
 								<a href={`/blog/${post.slug}/`}>
 									<img width={510} height={255} src={post.data.heroImage} alt="" />
