--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/BlogPost.astro';
 		<blockquote>
 			<p>"Llama a las cosas por su nombre."</p>
 		</blockquote>
-		<figcaption> - Frase de la memoria colectiva.</figcaption>
+		<figcaption></figcaption>
 	</figure>
 
 	<p>Todo debe tener un nombre, para ser llamado para algo, para cosas. Si no se invoca un individuo, qué se yo. Solo seríamos cuerpos andantes, humano001, 002, ...</p>
@@ -39,4 +39,10 @@ import Layout from '../layouts/BlogPost.astro';
 	</figure>
 	<hr>
 	<img src="/logo.png" alt="Logo" class="logo">
+	<figure>
+		<blockquote>
+			<p>"Rather than love, than money, than fame, give me truth."</p>
+		</blockquote>
+		<figcaption> -Henry David Thoreau, "Conclusion" to Walden; or, Life in the Woods (1854)</figcaption>
+	</figure>
 </Layout>
